--- a/AnalyzeSurvey.ipynb
+++ b/AnalyzeSurvey.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,6 +162,27 @@
    "metadata": {},
    "source": [
     "## Counts by continent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2783, 6)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#data = pd.read_csv('data/data.csv')\n",
+    "data.shape"
    ]
   },
   {
