--- a/AnalyzeSurvey.ipynb
+++ b/AnalyzeSurvey.ipynb
@@ -143,7 +143,7 @@
    "outputs": [],
    "source": [
     "# Read continents shapefile\n",
-    "continents = gpd.read_file('raw/continents.geojson')\n",
+    "continents = gpd.read_file('raw/continents-buffered.geojson')\n",
     "\n",
     "# Perform spatial join\n",
     "final = gpd.sjoin(geocoded, continents, how='left')\n",
@@ -166,44 +166,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from shapely import wkt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = gpd.GeoDataFrame( pd.read_csv('data/data.csv', usecols=['geometry', 'address', 'Lat', 'Lng']) )\n",
+    "data['geometry'] = data['geometry'].apply(wkt.loads)\n",
+    "data.crs = 'EPSG:4326'\n",
+    "\n",
+    "data_not_null = data[ ~data.Lat.isna() ]\n",
+    "\n",
+    "# Read continents shapefile\n",
+    "continents = gpd.read_file('raw/continents-buffered.geojson')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final = gpd.sjoin(data_not_null, continents, how='left')\n",
+    "\n",
+    "address2continent = {\n",
+    "    'PHILIPPINES': 'Asia',\n",
+    "    'INDONESIA': 'Oceania',\n",
+    "    'GUERNSEY': 'Europe',\n",
+    "    'MIAMI': 'North America',\n",
+    "    'MARMARA': 'Europe',\n",
+    "    'REYKJA': 'Europe',\n",
+    "    'SUOMI': 'Europe',\n",
+    "    'LEBANON': 'Europe',\n",
+    "    'VILA VELHA': 'South America'\n",
+    "}\n",
+    "\n",
+    "for i, row in final.iterrows():\n",
+    "    if type(row.CONTINENT) != str:\n",
+    "        \n",
+    "        for addr in address2continent:\n",
+    "            \n",
+    "            if addr in final.loc[i, 'address'].upper():\n",
+    "                final.loc[i, 'CONTINENT'] = address2continent[addr]\n",
+    "\n",
+    "final.to_csv('data/data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final.loc[final.CONTINENT.isna()].loc[ final.address.str.contains('Philippines'), 'Continent' ] = 'Asia'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2783, 6)"
+       "(2735, 4)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#data = pd.read_csv('data/data.csv')\n",
-    "data.shape"
+    "data_not_null.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>address</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>index_right</th>\n",
+       "      <th>CONTINENT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>310</th>\n",
+       "      <td>POINT (-40.29203 -20.32973)</td>\n",
+       "      <td>Vila Velha, Microrregião Vitória, Região Metro...</td>\n",
+       "      <td>-20.329729</td>\n",
+       "      <td>-40.292028</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        geometry  \\\n",
+       "310  POINT (-40.29203 -20.32973)   \n",
+       "\n",
+       "                                               address        Lat        Lng  \\\n",
+       "310  Vila Velha, Microrregião Vitória, Região Metro... -20.329729 -40.292028   \n",
+       "\n",
+       "     index_right CONTINENT  \n",
+       "310          NaN       NaN  "
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final[final.CONTINENT.isna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Asia             904\n",
-       "North America    782\n",
-       "Europe           510\n",
-       "South America    168\n",
-       "Africa           147\n",
+       "Asia             936\n",
+       "North America    836\n",
+       "Europe           541\n",
+       "South America    170\n",
+       "Africa           163\n",
        "Australia         70\n",
-       "Oceania           11\n",
+       "Oceania           19\n",
        "Name: CONTINENT, dtype: int64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
